--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<link rel="stylesheet" href="./css/styles.css">
+		<link rel="stylesheet" href="styles.css">
 	</head>
 	<header>
 		<ul>
@@ -24,7 +24,7 @@
 				<p class="homer-title">Hola, yo soy Homero!!!</p>
 				<p class="homer-description">Anda la osa una web sobre mi, woohooo !!</p>
 			</div>
-			<img src="../homero/img/Homer_Simpson.png" />
+			<img src="Homer_Simpson.png" />
 		</div>
 		
 		<div id="section2">
@@ -32,7 +32,7 @@
 				<p class="family-title">Mi Familia</p>
 				<p class="family-description">”En mi familia somos cinco personas: Marge, Bart, la niña Bart, la que nunca habla y ese tipo gordo… como lo detesto !!!”</p>
 			</div>
-			<img src="../homero/img/familia.png" />
+			<img src="familia.png" />
 		</div>
 		<div id="section3">
 			<div>
@@ -41,34 +41,34 @@
 			</div>
 			<div class="grid-container">
 				<div class="grid-item">
-					<img src="../homero/img/homerfoo-1.png" />
+					<img src="homerfoo-1.png" />
 				</div>
 				<div class="grid-item">
-					<img src="../homero/img/homerfoo-2.png" />
+					<img src="homerfoo-2.png" />
 				</div>
 				<div class="grid-item">
-					<img src="../homero/img/homerfoo-3.png" />
+					<img src="homerfoo-3.png" />
 				</div>
 				<div class="grid-item">
-					<img class="img-4" src="../homero/img/homerfoo-4.png" />
+					<img class="img-4" src="homerfoo-4.png" />
 				</div>
 				<div class="grid-item">
-					<img class="img-5" src="../homero/img/homerfoo-5.png" />
+					<img class="img-5" src="homerfoo-5.png" />
 				</div>
 				<div class="grid-item item-6">
-					<img class="img-6"src="../homero/img/homerfoo-6.png" />
+					<img class="img-6"src="homerfoo-6.png" />
 				</div>
 				<div class="grid-item">
-					<img src="../homero/img/homerfoo-7.png" />
+					<img src="homerfoo-7.png" />
 				</div>
 				<div class="grid-item item-8">
-					<img class="img-8" src="../homero/img/homerfoo-8.png" />
+					<img class="img-8" src="homerfoo-8.png" />
 				</div>
 				<div class="grid-item">
-					<img class="img-9" src="../homero/img/homerfoo-9.png" />
+					<img class="img-9" src="homerfoo-9.png" />
 				</div>
 				<div class="grid-item">
-					<img class="img-10" src="../homero/img/homerfoo-10.png" />
+					<img class="img-10" src="homerfoo-10.png" />
 				</div>
 			</div>
 		</div>
